2013-09-24  Alan Modra  <amodra@gmail.com>

	* genscripts.sh (LIB_PATH): Don't exclude libdir or tooldir when
	sysrooted.  Also, don't always add tooldir when non-sysrooted.
	Instead add both when native and tooldir also when TOOL_DIR is
	defined.  Always prepend '=' to paths when sysrooted.  Always
	put paths with LIBPATH_SUFFIX first in search order.

2013-09-20  Chung-Lin Tang  <cltang@codesourcery.com>

	* Makefile.am (enios2elf.c): Change tdir_nios2 to tdir_nios2elf.
	* Makefile.in: Regenerate.

2013-09-20  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2013-09-18  Tristan Gingold  <gingold@adacore.com>

	* NEWS: Add marker for 2.24.

2013-09-17  Nick Clifton  <nickc@redhat.com>

	PR ld/15957
	* deffilep.y (def_file_add_directive): Avoid readin past end of
	buffer.

2013-08-28  Nick Clifton  <nickc@redhat.com>

	PR ld/15896
	* ld.texinfo: Fix uses of MB abbreviation.

2013-08-26  Roland McGrath  <mcgrathr@google.com>

	* emulparams/elf_i386_nacl.sh (ARCH): Set to i386:nacl.
	* emulparams/elf_x86_64_nacl.sh (ARCH): Set to i386:x86-64:nacl.
	* emulparams/elf32_x86_64_nacl.sh (ARCH): Set to i386:x64-32:nacl.

2013-08-23  Roland McGrath  <mcgrathr@google.com>

	* emulparams/elf_nacl.sh (nacl_rodata_addr): Don't add in
	SIZEOF_HEADERS here; elf.sc does it already.

2013-08-23  Nick Clifton  <nickc@redhat.com>

	PR ld/15839
	* scripttempl/avr.sc: Do not include gc'able sections into general
	sections during relocatable links.

2013-08-22  Christian Franke  <franke@computer.org>

	* emultempl/pe.em: Add --disable-large-address-aware option.
	* ld.texinfo (--disable-large-address-aware): Add documentation.

2013-08-14  Clemens Lang  <clemens.lang@fau.de>

	* ldexp.c: Add LOG2CEIL() builtin function to linker script language
	* ldgram.y: Likewise
	* ldlex.l: Likewise
	* NEWS: Mention the new feature.
	* ld.texinfo: Document the new feature.

2013-07-19  Sebastian Huber  <sebastian.huber@embedded-brains.de>
