@@ -1,5 +1,5 @@
 # The PLT-agnostic parts of a generic 32-bit ELF PowerPC target.  Included by:
-# elf32ppc.sh elf32ppcvxworks.sh
+# elf32ppc.sh elf32ppcvxworks.sh elf64ppc.sh
 TEMPLATE_NAME=elf32
 GENERATE_SHLIB_SCRIPT=yes
 GENERATE_PIE_SCRIPT=yes
@@ -45,6 +45,14 @@ if test `echo "$host" | sed -e s/64//` = `echo "$target" | sed -e s/64//`; then
 fi
 
 # Look for 64 bit target libraries in /lib64, /usr/lib64 etc., first.
-case "$EMULATION_NAME" in
-  *64*) LIBPATH_SUFFIX=64 ;;
+# Similarly, look for 32 bit libraries in /lib32, /usr/lib32 etc.
+case "$host":"$EMULATION_NAME" in
+  *le-*:*64lppc*) LIBPATH_SUFFIX=64 ;;
+  *le-*:*32lppc*) LIBPATH_SUFFIX=32 ;;
+  *le-*:*64*) LIBPATH_SUFFIX=64be ;;
+  *le-*:*32*) LIBPATH_SUFFIX=32be ;;
+  *:*64lppc*) LIBPATH_SUFFIX=64le ;;
+  *:*32lppc*) LIBPATH_SUFFIX=32le ;;
+  *:*64*) LIBPATH_SUFFIX=64 ;;
+  *:*32*) LIBPATH_SUFFIX=32 ;;
 esac
